proc-macros/tests/ui/incorrect/rpc/rpc_conflicting_alias.stderr
error: "foo_dup" is already defined
 --> $DIR/rpc_conflicting_alias.rs:6:11
  |
6 |     async fn async_method(&self) -> jsonrpsee::types::JsonRpcResult<u8>;
  |              ^^^^^^^^^^^^
